crates/loxide_interpreter/tests/snapshots/integration@assignment__undefined.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
unknown = "what"; // expect runtime error: Undefined variable 'unknown'.


>>>>> Error Section <<<<<
  × Undefined Variable: unknown
   ╭────
 1 │ unknown = "what"; // expect runtime error: Undefined variable 'unknown'.
   · ───┬───
   ·    ╰── variable `unknown` is not defined
   ╰────
